TODO: after requesting the selection and getting a timeout, no further requests will be sent.
TODO: "slow" rendering mode for bidi and scripts
TODO: read property sequence is broken with respect to utf-8 etc.
TODO: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
TODO: clarify and get rid of SMOOTH_REFRESH etc.
TODO: run external commands more sytematically (using $self->env etc.)
WISH: OnTheSpot editing, or maybe switch to miiiiiiif
WISH: just for fun, do shade and tint with XRender.
WISH: support tex fonts

7.0
	- added sections for DISTRIBUTION MAINTAINERS and about
          SETUID/SETGID to the FAQ.
        - selection, searchable-scrollback, selection-popup and
          option-popup extensions enabled by default.
        - increased xft drawing speed for problematic fonts. The effect
          will likely be small as 99% of the xft slowness is server-related.
        - perl: much increased functionality, better overlays, popup support
          and much much more.
        - perl: urxvt::line now can set via ->t and ->r.
        - perl: changed interpretation of --perl-ext-common and -pe.
        - perl: finally implemented --perl-eval.
        - perl: non-blocking anyevent support.
        - perl: run tainted and ignore perl-eval/perl-lib if started
          setuid/setgid.
        - free the resource database: this plugs a massive memory leak. As a
          side effect, it also gets rid of XGetDefault calls.
        - free one of the cursors, fixes a small memory leak.
        - built-in (as opposed to terminfos) visual bell was broken/too fast.
        - applied minor cleanups by Ladislav Michnovic.
        - applied better configure support for openpty by Emanuele Giaquinta.
        - mark-urls launch-on-click by jepler.
        - removed "small" resource parsing function, as it wasn't really
          compatible, and not really small either.
        - removed PATH_ENV and PATH file search support.