@@ -6,12 +6,13 @@ TODO: "slow" rendering mode for bidi and scripts
 TODO: read property sequence is broken with respect to utf-8 etc.
 TODO: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
 TODO: clarify and get rid of SMOOTH_REFRESH etc.
-TODO: run external commands more sytematically (using $self->env etc.)
-WISH: OnTheSpot editing, or maybe switch to miiiiiiif
+WISH: OnTheSpot editing, or maybe switch to miiiiiiif. or maybe use perl and an overlay...
 WISH: just for fun, do shade and tint with XRender.
 WISH: support tex fonts
 
 7.0
+TODO: run external commands more sytematically (using $self->env etc.)
+TODO: document searchable-scorllback hotkey
 	- added sections for DISTRIBUTION MAINTAINERS and about
           SETUID/SETGID to the FAQ.
         - selection, searchable-scrollback, selection-popup and
@@ -37,6 +38,9 @@ WISH: support tex fonts
           compatible, and not really small either.
         - removed PATH_ENV and PATH file search support.
         - removed support for locale-specific app-defaults file.
+        - fixed a bug where out-of-bounds colour sequences could lead
+          to crashes.
+        - XTerm_Color01 sequence returned wrong results in query mode.
 
 6.3  Wed Jan  4 22:37:10 CET 2006
         - SECURITY FIX: on systems using openpty, permissions were
